--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -4,6 +4,9 @@ body {
 }
 
 body{
+  font-family: 'DM Sans', sans-serif;
+  font-family: 'Poppins', sans-serif;
+  font-family: 'Rubik', sans-serif;
   display: flex;
   flex-direction: column;
   font-size: 16px;
@@ -14,8 +17,15 @@ body{
   flex-grow: 1;
 }
 
-.container {
-  max-width: 1200px;
+.big-container {
+  max-width: 1770px;
   margin: 0 auto;
   padding: 0 15px;
 } 
+
+.container {
+  max-width: 1200px;
+  padding: 0 15px;
+  margin: 0 auto;
+}
+
