--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1,7 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Poppins:wght@700&family=Rubik:wght@400;500&display=swap');
 @import 'reset';
 @import 'vars';
 @import 'fonts';
 @import 'global';
+
+@import 'blocks/header';
 
 
 
