--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -2,7 +2,9 @@ $title: #436372;
 $default: #243f4d;
 $btn: #a3bbc8;
 $accent: #fcd7b6;
-
+$grey: #7b7b7b;
+$footer-title: #1f2044;
+$placeholder: #234969;
 
 %DM-Sans400 {
   font-family: 'DM Sans', sans-serif;
