--- a/app/scss/blocks/_header.scss
+++ b/app/scss/blocks/_header.scss
@@ -29,14 +29,29 @@
   }
 
   &__items {
-    margin-right: 30px;
+    margin-right: 26px;
     transition: all 0.9s;
+    position: relative;
+    padding: 0 2px;
+
     &:last-child {
       margin-right: 0;
     }
 
-    &:hover {
-      border-bottom: 1px solid $title
+    &::before {
+      content: '';
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      width: 100%;
+      height: 2px;
+      transition: 0.3s;
+      background-color: $title;
+      transform: scale(0);
+    }
+
+    &:hover::before {
+      transform: scale(1);
     }
   }
 
