--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -2,9 +2,12 @@
 @import 'reset';
 @import 'vars';
 @import 'fonts';
+@import 'libs';
 @import 'global';
 
 @import 'blocks/header';
+@import 'blocks/banner';
+@import 'blocks/services';
 
 
 
