--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -3,7 +3,7 @@ body {
   height: 100%;
 }
 
-body{
+body {
   font-family: 'DM Sans', sans-serif;
   font-family: 'Poppins', sans-serif;
   font-family: 'Rubik', sans-serif;
@@ -17,15 +17,13 @@ body{
   flex-grow: 1;
 }
 
-.big-container {
-  max-width: 1800px;
-  margin: 0 auto;
-  padding: 0 15px;
-} 
-
 .container {
   max-width: 1200px;
   padding: 0 15px;
   margin: 0 auto;
-}
 
+  &--big {
+    @extend .container;
+    max-width: 1800px;
+  }
+}
